# strands-pos

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  database_agent.py  delete_assistant.py  deploy.sh  destroy.sh  insert_assistant.py  migration_report.md  neon_mcp.py  pyproject.toml  requirements.txt  sample_prompt.txt  schema_assistant.py
docs/: gcp-deployment-troubleshooting.md
infra/: ecs-stack.yml  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/.terraform/modules/: modules.json
infra/modules/artifact-registry/: main.tf  variables.tf
infra/modules/cloudbuild-pipeline/: main.tf  variables.tf
infra/modules/cloudrun-runtime/: main.tf  outputs.tf  variables.tf
multi-agent-runtime/: backend.tf.example  deploy.sh  destroy.sh  main.tf  outputs.tf  variables.tf
multi-agent-runtime/modules/artifact-registry/: outputs.tf
multi-agent-runtime/modules/cloudbuild-pipeline/: outputs.tf
multi-agent-runtime/modules/cloudrun-runtime/: main.tf  outputs.tf  variables.tf
server/: api.py  log_stream.py  model.py  model_provider.py  neon_mcp.py  orchestrator.py  repository.py  schemas.py
server/config/: __init__.py
server/core/: model.py  orchestrator.py
server/db/: neon_mcp.py  repository.py
server/static/: index.html
server/tools/: assistant_factory.py  delete_assistant.py  insert_assistant.py  safety_reviewer.py  schema_assistant.py
tests/: conftest.py  test_approval_lifecycle.py  test_e2e.py  test_query_lifecycle.py  test_smoke.py
